--- a/fuzz/Dockerfile
+++ b/fuzz/Dockerfile
@@ -19,3 +19,7 @@ FROM --platform=linux/amd64 rustlang/rust:nightly
 ## TODO: Change <Path in Builder Stage>
 
 COPY --from=builder /num-rational/fuzz/target/x86_64-unknown-linux-gnu/release/ratio /
+
+COPY --from=builder /num-rational/fuzz/target/x86_64-unknown-linux-gnu/release/ratio_reduce /
+
+COPY --from=builder /num-rational/fuzz/target/x86_64-unknown-linux-gnu/release/ratio_round /
