Added add testing harness

--- a/.github/workflows/mayhem.yml
+++ b/.github/workflows/mayhem.yml
@@ -57,6 +57,7 @@ jobs:
         - fuzz/mayhemfiles/Mayhemfile_ratio
         - fuzz/mayhemfiles/Mayhemfile_ratio_reduce
         - fuzz/mayhemfiles/Mayhemfile_ratio_round
+        - fuzz/mayhemfiles/Mayhemfile_add
     steps:
     - uses: actions/checkout@v3
     - name: Start analysis for ${{ matrix.mayhemfile }}
