--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -41,3 +41,9 @@ name = "add"
 path = "fuzz_targets/add.rs"
 test = false
 doc = false
+
+[[bin]]
+name = "multiply"
+path = "fuzz_targets/multiply.rs"
+test = false
+doc = false
