--- a/.github/workflows/mayhem.yml
+++ b/.github/workflows/mayhem.yml
@@ -41,7 +41,7 @@ jobs:
       with:
         context: .
         push: true
-        file: fuzz/Dockerfile
+        file: mayhem/Dockerfile
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
     outputs:
@@ -54,11 +54,11 @@ jobs:
       fail-fast: false
       matrix:
         mayhemfile:
-        - fuzz/mayhemfiles/Mayhemfile_ratio
-        - fuzz/mayhemfiles/Mayhemfile_ratio_reduce
-        - fuzz/mayhemfiles/Mayhemfile_ratio_round
-        - fuzz/mayhemfiles/Mayhemfile_add
-        - fuzz/mayhemfiles/Mayhemfile_multiply
+        - mayhem/ratio.mayhemfile
+        - mayhem/ratio_reduce.mayhemfile
+        - mayhem/ratio_round.mayhemfile
+        - mayhem/add.mayhemfile
+        - mayhem/multiply.mayhemfile
     steps:
     - uses: actions/checkout@v3
     - name: Start analysis for ${{ matrix.mayhemfile }}
